syntax = "proto3";
package questions_service;

import "tauri_ipc.proto";

service QuestionsService {
    rpc VideoQuestion (VideoQuestionRequest) returns (VideoQuestionResponse);
    rpc ArticleQuestion (ArticleQuestionRequest) returns (ArticleQuestionResponse);
    rpc PdfQuestion (PdfQuestionRequest) returns (PdfQuestionResponse);
}


message ProtoChatMessage {
    string role = 1;
    string content = 2;
}

message VideoQuestionRequest {
    repeated ProtoChatMessage messages = 1;
    ipc.ProtoYoutubeState state = 2;
}

message VideoQuestionResponse {
    string response = 1;
}

message ArticleQuestionRequest {
    repeated ProtoChatMessage messages = 1;
    ipc.ProtoArticleState state = 2;
}

message ArticleQuestionResponse {
    string response = 1;
}

message PdfQuestionRequest {
    repeated ProtoChatMessage messages = 1;
    ipc.ProtoPdfState state = 2;
}

message PdfQuestionResponse {
    string response = 1;
}
